- RISC OS: fix receiving PreQuit messages.
- RISC OS: ensure the window size is consistent at different DPIs.
- RISC OS, video: add support for more pixel formats.
- RISC OS: mouse fixes. restore mouse palette when exiting while mouse
  is in focus. don't reset mouse focus when recreating the window.
- RISC OS: support Windows and Menu key input.
- RISC OS: implement SDL_WM_IconifyWindow()
- Configuration: fix library detection selecting wrong lib (bug 2795.)
- Configuration: fix detecting dynamic library support on powerpc64le
  (bug 3481.)
- SDL error: string formatting fixes to deal with nasty corner cases
  (bug 2049.)
- SDL_error: handle %lu, %li and %ld in format string (bug 3739.)
- stdlib: updated SDL_qsort() code.
- stdlib: use _strtoi64() and _strtoui64() when available for windows.
- headers, close_code.h: fix unbalanced #pragma pack(pop) for watcom
  builds (bug 3781.)
- headers, begin_code.h, close_code.h: updates to SDLCALL and DECLSPEC
  macros for OS/2.
- headers, endian: add Watcom inline asm for SDL_Swap16 and SDL_Swap32
- headers, config: updates to default windows and os2 config files.
- headers, SDL_syswm.h, SDL_stdinc.h: include system headers before
  packing alignment changes (bug 4149.)


1.2.15:  This is a minor bug fix release:

General Notes:
- Fixed assembly register clobbering in CPU info routines.
- Fixed memory stomp when using stretch blit on large images.
- Fixed pixel corruption with overlapping blits.
- SDL_JOYSTICK_DEVICE can be a colon separated list of joystick devices.
- Disabled MMX blitters since they don't compile on modern compilers.

Unix Notes:
- Fixed crash in joystick code on newer Linux kernels.
- Fixed channel swizzling for ALSA target with 6-channel output.
- Use the OpenGL GLX_EXT_swap_control extension if available.
- XRandR support is disabled by default because it causes desktop
  reconfiguring. It can be enabled with the SDL_VIDEO_X11_XRANDR=1
  environment variable.

Windows Notes: